--- a/views/product.hbs
+++ b/views/product.hbs
@@ -37,6 +37,8 @@
                     </div>
                 </div>
             {{/with}}
+            <h3>Другие товары и услуги</h3>
+            <p>Вертикальные свайпы - навигация по категориям,горизонтальные свайпы - другие позиции в данное категории</p>
             {{>bottomSlider}}
         </main>
         {{>footer}}
