--- a/views/teammates.hbs
+++ b/views/teammates.hbs
@@ -27,7 +27,7 @@
                             <img src="/img/uploads/{{this.avatar}}" alt="Аватарка" class="teammate-img">
                             <div class="col teammate-text">
                                 <h4>{{this.firstname}} {{this.surname}}</h4>
-                                <p>{{this.description}}</p>
+                                <p>{{inputHTML this.description}}</p>
                                 <img src="/img/uploads/{{this.icon}}" class="teammate-icon" alt="Иконка специальности">
                             </div>
                         </div>
@@ -45,7 +45,7 @@
                             <img src="/img/uploads/{{this.avatar}}" alt="Аватарка" class="teammate-img">
                             <div class="col teammate-text">
                                 <h4>{{this.firstname}} {{this.surname}}</h4>
-                                <p>{{this.description}}</p>
+                                <p>{{inputHTML this.description}}</p>
                                 <img src="/img/uploads/{{this.icon}}" class="teammate-icon" alt="Иконка специальности">
                             </div>
                         </div>
