--- a/views/partials/modalToggler.hbs
+++ b/views/partials/modalToggler.hbs
@@ -1,8 +1,15 @@
 <div class="side-menu row">
-    <div class="col auth-block">
-        <img src="/img/icons/login.png" alt="">
-        <a href="">Авторизация</a>
-    </div>
+    {{#if isAuthorized}}
+        <a href="#" class="col auth-block">
+            <img class="user-avatar" src="/img/uploads/{{authUserAvatar}}" alt="">
+            <span>{{authUserLogin}}</span>
+        </a>
+    {{else}}
+        <a href="/auth" class="col auth-block">
+            <img src="/img/icons/login.png" alt="">
+            <span>Авторизация</span>
+        </a>
+    {{/if}}
     <div class="col menu-block">
         <img src="/img/icons/menu.png" alt="">
     </div>
