--- a/views/teammate.hbs
+++ b/views/teammate.hbs
@@ -42,6 +42,7 @@
                     </div>
                 </div>
             {{/with}}
+            <h3>Произведения этого автора:</h3>
             <div class="another-records">
                 <div class="swiper-container">
                     <!-- Additional required wrapper -->
