--- a/views/index.hbs
+++ b/views/index.hbs
@@ -16,6 +16,7 @@
         <header class="header">
             <div class="col logo-container">
                 <div class="logo row">
+                    <img src="/img/icons/logo.png" alt="Логотип">
                     <a href="/">AR-OPTIMA</a>
                 </div>
                 <div class="banner">
