--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -231,6 +231,9 @@ body{
       width: 100%;
       height: 200px;
       border:2px solid white;
+      img{
+        width: 100px;
+      }
       a{
         font-size: 1.5em;
         font-family: PoiretOne, 'sans-serif';
@@ -414,6 +417,7 @@ body{
 .main{
   grid-column: 2/6;
   padding: 14px 0;
+  //Заголовки
   //Все тиммейты
   .all-employers{
     margin:30px 0;
@@ -504,6 +508,14 @@ body{
       h4{
         margin: 10px;
       }
+      p{
+        margin: 10px 0;
+      }
+      .current-product-price{
+        font-size: 1.2em;
+        color:red;
+        margin: 14px 0;
+      }
     }
   }
   //Один сервис
@@ -577,11 +589,50 @@ body{
           padding: 10px;
           width: 100px;
           border:none;
+          color: white;
+        }
+        .btn-pos{
+          background-color: #151D28;
+        }
+        .btn-neg{
+          background-color: darkred;
         }
       }
     }
   }
 
+  .form-work{
+    padding: 14px;
+    textarea{
+      font-size: 1.05em;
+      padding: 4px;
+    }
+    .form-controls{
+      justify-content: space-evenly;
+      height: 60px;
+      button{
+        height: 100%;
+        width: 50%;
+        font-size: 1.05em;
+        color:white;
+      }
+      .btn-pos{
+        background-color: #2d4972;
+      }
+      .btn-neg{
+        background-color: #c81818;
+      }
+    }
+  }
+}
+
+.auth-container{
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  form{
+    @include form();
+  }
 }
 
 //Подвал
