--- a/views/auth.hbs
+++ b/views/auth.hbs
@@ -19,7 +19,7 @@
                 <button id="reg-btn-show" data-target="register-form-container">Регистрация</button>
                 <button id="auth-btn-show" data-target="login-form-container">Авторизация</button>
             </div>
-            <div class="auth-forms-container row">
+            <div id="auth-register" class="auth-forms-container row">
                 <div class="form-container row register-form-container form-container-active">
                     <form class="register-form col" action="auth/register" method="post" enctype="multipart/form-data">
                         <header class="row">
@@ -37,9 +37,14 @@
                         </div>
                     </form>
                 </div>
-                <div class="form-container row login-form-container">
+                <div id="auth-login" class="form-container row login-form-container">
                     <form class="login-form col" action="auth/login" method="post">
-                        <h3>Авторизация:</h3>
+                        <header class="col">
+                            <h3>Авторизация:</h3>
+                            {{#if authError}}
+                            <div class="auth-error">{{authError}}</div>
+                            {{/if}}
+                        </header>
                         <label for="log-login-input">Логин:</label>
                         <input type="text" id="log-login-input" name="logLogin">
                         <label for="log-password-input">Пароль:</label>
