код был успешно сокращён и добвлен файл bootstrap.js

--- a/views/partials/modalMenu.hbs
+++ b/views/partials/modalMenu.hbs
@@ -29,7 +29,7 @@
         <a href="/#demo-example">#Демо-пример</a>
         <a href="/#personal-model">#Услуги</a>
         {{#if isAuthorized}}
-        <a href="user/exit">Выйти</a>
+        <a href="personal/exit">Выйти</a>
         {{/if}}
     </nav>
 </div>
