сейв до внедрения комментариев

--- a/views/partials/headerLight.hbs
+++ b/views/partials/headerLight.hbs
@@ -1,7 +1,8 @@
 <header class="header-light row">
     <div class="col logo-container">
         <div class="logo row">
-            <a href="/">AR-OPTIMA</a>
+            <img src="/img/icons/logo.png" alt="Логотип">
+            <a class="col" href="/">AR-OPTIMA</a>
         </div>
     </div>
     {{>modalToggler}}
