--- a/views/partials/modalMenu.hbs
+++ b/views/partials/modalMenu.hbs
@@ -7,7 +7,7 @@
                     <span>{{authUserLogin}}</span>
                 </a>
             {{else}}
-                <a href="/auth" class="col">
+                <a href="/auth#auth-login" class="col">
                     <img class="user-avatar" src="/img/icons/login.png" alt="">
                     <span>Авторизация</span>
                 </a>
