--- a/views/partials/modalToggler.hbs
+++ b/views/partials/modalToggler.hbs
@@ -5,7 +5,7 @@
             <span>{{authUserLogin}}</span>
         </a>
     {{else}}
-        <a href="/auth" class="col auth-block">
+        <a href="/auth#auth-login" class="col auth-block">
             <img src="/img/icons/login.png" alt="">
             <span>Авторизация</span>
         </a>
