--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -43,7 +43,7 @@ a{
   background-color: #143861;
 }
 //7)swiper
-.another-records{ //TODO Вынести в начало и расположить этот блок на всех страницаз
+.another-records{
   .swiper-container{
     .personal-card{
       @include serviceCard();
@@ -84,6 +84,18 @@ a{
 
 ::-webkit-scrollbar-thumb:hover {
   background-color: #253861;
+}
+//8)Кнопка купить
+form{
+  #buy-btn{
+    background-color: red;
+    font-size: 1.1em;
+    width: 100%;
+    height: 100%;
+    color:white;
+    border:none;
+    padding: 14px 20px;
+  }
 }
 
 //Тело:
@@ -347,6 +359,11 @@ body{
     justify-content: center;
     .logo{
       padding: 0 24px;
+      align-items: center;
+      justify-content: center;
+      img{
+        width: 100px;
+      }
       a{
         font-size: 1.6em;
         color:white;
@@ -416,7 +433,7 @@ body{
 //Главный контент
 .main{
   grid-column: 2/6;
-  padding: 14px 0;
+  padding: 24px 0;
   //Заголовки
   //Все тиммейты
   .all-employers{
@@ -511,10 +528,14 @@ body{
       p{
         margin: 10px 0;
       }
-      .current-product-price{
-        font-size: 1.2em;
-        color:red;
+      .row{
+        justify-content: space-evenly;
         margin: 14px 0;
+        .current-product-price{
+          font-size: 1.2em;
+          color:red;
+          margin: 14px 0;
+        }
       }
     }
   }
@@ -600,7 +621,12 @@ body{
       }
     }
   }
-
+  .all-user-purchases{
+    justify-content: space-between;
+    .top-product{
+      @include card();
+    }
+  }
   .form-work{
     padding: 14px;
     textarea{
